load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kas",
    srcs = ["api.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/kas",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/gitlab",
        "//internal/module/modserver",
        "//internal/tool/errz",
        "//internal/tool/grpctool",
        "//internal/tool/mathz",
        "//internal/tool/retry",
        "@com_gitlab_gitlab_org_labkit//errortracking",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "kas_test",
    size = "small",
    srcs = ["api_test.go"],
    embed = [":kas"],
    race = "on",
    deps = [
        "//internal/api",
        "//internal/gitlab",
        "//internal/module/modserver",
        "//internal/tool/testing/matcher",
        "//internal/tool/testing/mock_errtracker",
        "//internal/tool/testing/mock_gitlab",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_gitlab_gitlab_org_labkit//errortracking",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//zaptest",
    ],
)
