load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = [
        "redis.go",
        "token_limiter.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/redis",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_fzambia_sentinel//:sentinel",
        "@com_github_gomodule_redigo//redis",
        "@com_gitlab_gitlab_org_labkit//log",
    ],
)

go_test(
    name = "redis_test",
    size = "small",
    srcs = [
        "redis_test.go",
        "token_limiter_test.go",
    ],
    embed = [":redis"],
    race = "on",
    deps = [
        "//internal/api",
        "//internal/api/apiutil",
        "//internal/tools/testing/mock_redis",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
    ],
)
