load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "agentcfg.proto",
    workspace_relative_target_directory = "pkg/agentcfg",
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
    ],
)

go_library(
    name = "agentcfg",
    srcs = [
        "agentcfg.pb.go",
        "agentcfg.pb.validate.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/agentcfg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:go_custom_library",
        "@com_github_golang_protobuf//ptypes",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_custom_test(
    name = "agentcfg_test",
    srcs = [
        "roundtrip_test.go",
        "validation_test.go",
    ],
    embed = [":agentcfg"],
    deps = [
        "//internal/tool/testing/testhelpers",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
