load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["agentg.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/kubernetes-management-ng/gitlab-agent/pkg/agentg",
    visibility = ["//visibility:public"],
    deps = ["//pkg/agentrpc:go_default_library"],
)
