load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["agentg.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/agentg",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/agentrpc:go_default_library",
        "//pkg/api:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb:go_default_library",
        "@com_gitlab_gitlab_org_labkit//log:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
