load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["agentk.go"],
    importpath = "gitlab.com/ash2k/gitlab-agent/pkg/agentk",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/agentrpc:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
    ],
)
