load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_compile")
load("//build:build.bzl", "extract_generated")

proto_library(
    name = "agentrpc_proto",
    srcs = ["agentrpc.proto"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/agentcfg:agentcfg_proto"],
)

go_grpc_compile(
    name = "agent_grpc",
    tags = ["manual"],
    deps = [":agentrpc_proto"],
)

extract_generated(
    name = "extract_agent_grpc",
    file_to_copy = "agentrpc.pb.go",
    label = ":agent_grpc",
    root_relative_directory = "pkg/agentrpc/",
)

go_library(
    name = "go_default_library",
    srcs = ["agentrpc.pb.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/agentrpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/agentcfg:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
