load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "types.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/api",
    visibility = ["//visibility:public"],
    deps = ["@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb:go_default_library"],
)
