load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pool.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/gitaly",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
