load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/gitlab",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/gitlab/fromworkhorse/roundtripper:go_default_library",
    ],
)
