load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_proto_compile")
load("//build:build.bzl", "copy_to_workspace")
load("//build:validate.bzl", "go_validate_compile")

proto_library(
    name = "proto",
    srcs = ["kascfg.proto"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

go_proto_compile(
    name = "proto_compile",
    tags = ["manual"],
    deps = [":proto"],
)

go_validate_compile(
    name = "proto_compile_validate",
    tags = ["manual"],
    deps = [":proto"],
)

copy_to_workspace(
    name = "extract_generated",
    file_to_copy = "kascfg.pb.go",
    label = ":proto_compile",
    workspace_relative_target_directory = "pkg/kascfg",
)

copy_to_workspace(
    name = "extract_generated_validator",
    file_to_copy = "kascfg.pb.validate.go",
    label = ":proto_compile_validate",
    workspace_relative_target_directory = "pkg/kascfg",
)

go_library(
    name = "kascfg",
    srcs = [
        "kascfg.pb.go",
        "kascfg.pb.validate.go",
        "kascfg_extra.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/kascfg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:go_custom_library",
        "@com_github_golang_protobuf//proto",
        "@com_github_golang_protobuf//ptypes",
        "@com_github_golang_protobuf//ptypes/duration",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_test(
    name = "kascfg_test",
    size = "small",
    srcs = [
        "config_example_test.go",
        "validation_test.go",
    ],
    data = ["config_example.yaml"],
    embed = [":kascfg"],
    race = "on",
    deps = [
        "//cmd/kas/kasapp",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
