load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//build:proto.bzl", "go_proto_generate")

go_proto_generate(
    src = "kascfg.proto",
    workspace_relative_target_directory = "pkg/kascfg",
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

go_library(
    name = "kascfg",
    srcs = [
        "kascfg.pb.go",
        "kascfg.pb.validate.go",
        "kascfg_extra.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/kascfg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:go_custom_library",
        "@com_github_golang_protobuf//proto",
        "@com_github_golang_protobuf//ptypes",
        "@com_github_golang_protobuf//ptypes/duration",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_custom_test(
    name = "kascfg_test",
    srcs = [
        "config_example_test.go",
        "validation_test.go",
    ],
    data = ["config_example.yaml"],
    embed = [":kascfg"],
    deps = [
        "//cmd/kas/kasapp",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
