load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["kgb.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/kgb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/agentcfg:go_default_library",
        "//pkg/agentrpc:go_default_library",
        "//pkg/api:go_default_library",
        "//pkg/api/apiutil:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb:go_default_library",
        "@com_gitlab_gitlab_org_labkit//log:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["kgb_test.go"],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//pkg/agentcfg:go_default_library",
        "//pkg/agentrpc:go_default_library",
        "//pkg/agentrpc/mock_agentrpc:go_default_library",
        "//pkg/api:go_default_library",
        "//pkg/api/apiutil:go_default_library",
        "//pkg/gitlab/mock_gitlab:go_default_library",
        "//pkg/tools/testing/mock_gitaly:go_default_library",
        "//pkg/tools/testing/protomock:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer/json:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
