load(":copy_helper.bzl", "copy_grpc_files")
load("//build:build.bzl", "copy_to_workspace")
load("@rules_proto_grpc//ruby:defs.bzl", "ruby_grpc_compile", "ruby_proto_compile")

ruby_proto_compile(
    name = "lib_proto",
    protos = [
        "//internal/module/agent_tracker:proto",
        "//internal/module/modserver:proto",
        "//internal/module/modshared:proto",
    ],
    tags = ["manual"],
)

ruby_grpc_compile(
    name = "agent_tracker_grpc",
    protos = [
        "//internal/module/agent_tracker/rpc:proto",
    ],
    tags = ["manual"],
)

ruby_grpc_compile(
    name = "configuration_project_grpc",
    protos = [
        "//internal/module/configuration_project/rpc:proto",
    ],
    tags = ["manual"],
)

copy_to_workspace(
    name = "extract_modshared_pb",
    file_to_copy = "modshared_pb.rb",
    label = ":lib_proto",
    workspace_relative_target_directory = "pkg/ruby/lib/internal/module/modshared",
)

copy_to_workspace(
    name = "extract_modserver_pb",
    file_to_copy = "modserver_pb.rb",
    label = ":lib_proto",
    workspace_relative_target_directory = "pkg/ruby/lib/internal/module/modserver",
)

copy_to_workspace(
    name = "extract_agent_tracker_pb",
    file_to_copy = "agent_tracker_pb.rb",
    label = ":lib_proto",
    workspace_relative_target_directory = "pkg/ruby/lib/internal/module/agent_tracker",
)

copy_grpc_files(
    label = ":agent_tracker_grpc",
    module_name = "agent_tracker",
)

copy_grpc_files(
    label = ":configuration_project_grpc",
    module_name = "configuration_project",
)
