load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/kubernetes-management-ng/gitlab-agent/cmd/agentg/agentgapp",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd:go_default_library",
        "//pkg/agentg:go_default_library",
        "//pkg/agentrpc:go_default_library",
        "@com_github_ash2k_stager//:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//auth:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//client:go_default_library",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
