load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "agentkapp",
    srcs = ["app.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/cmd/agentk/agentkapp",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//internal/agentk",
        "//internal/api",
        "//internal/module/agent_configuration/rpc",
        "//internal/module/gitops/agent",
        "//internal/module/modagent",
        "//internal/module/modshared",
        "//internal/module/observability/agent",
        "//internal/tool/grpctool",
        "//internal/tool/logz",
        "//internal/tool/tlstool",
        "//internal/tool/wstunnel",
        "//pkg/agentcfg",
        "@com_github_go_logr_zapr//:zapr",
        "@com_github_spf13_pflag//:pflag",
        "@com_gitlab_gitlab_org_labkit//correlation/grpc",
        "@io_k8s_cli_runtime//pkg/genericclioptions",
        "@io_k8s_cli_runtime//pkg/resource",
        "@io_k8s_klog_v2//:klog",
        "@io_nhooyr_websocket//:websocket",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//encoding/gzip",
        "@org_golang_google_grpc//keepalive",
        "@org_uber_go_zap//:zap",
    ],
)
