load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "agentkapp",
    srcs = [
        "api.go",
        "app.go",
        "logz.go",
        "module_runner.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/cmd/agentk/agentkapp",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd",
        "//internal/api",
        "//internal/module/agent_configuration/rpc",
        "//internal/module/cilium_alert/agent",
        "//internal/module/gitlab_access/rpc",
        "//internal/module/gitops/agent",
        "//internal/module/modagent",
        "//internal/module/modshared",
        "//internal/module/observability/agent",
        "//internal/module/reverse_tunnel/agent",
        "//internal/tool/errz",
        "//internal/tool/grpctool",
        "//internal/tool/logz",
        "//internal/tool/prototool",
        "//internal/tool/tlstool",
        "//internal/tool/wstunnel",
        "//pkg/agentcfg",
        "@com_github_ash2k_stager//:stager",
        "@com_github_go_logr_zapr//:zapr",
        "@com_github_grpc_ecosystem_go_grpc_middleware//validator",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_spf13_pflag//:pflag",
        "@com_gitlab_gitlab_org_labkit//correlation/grpc",
        "@com_gitlab_gitlab_org_labkit//errortracking",
        "@io_k8s_cli_runtime//pkg/genericclioptions",
        "@io_k8s_cli_runtime//pkg/resource",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp",
        "@io_k8s_klog_v2//:klog",
        "@io_nhooyr_websocket//:websocket",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//encoding/gzip",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "agentkapp_test",
    srcs = ["module_runner_test.go"],
    embed = [":agentkapp"],
    deps = [
        "//internal/module/agent_configuration/rpc",
        "//internal/module/modagent",
        "//internal/tool/testing/mock_modagent",
        "//internal/tool/testing/mock_rpc",
        "//pkg/agentcfg",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//zaptest",
    ],
)
